--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,6 +7,8 @@
     <color name="blue">#523B4DA8</color>
     <color name="rounded1">#8B006D5F</color>
     <color name="white">#FFFFFF</color>
+    <color name="color-red">#FFC0CB</color>
+    <color name="color-green">#00FF00</color>
 
 
     <color name="dot_dark_screen1">#03105A</color>
@@ -18,7 +20,7 @@
     <color name="dot_light_screen3">#2C03105A</color>
     <color name="bgdialog">#3DE1D1</color>
     <color name="green">#510FC715</color>
-    <color name="red">#FF0017</color>
+    <color name="red">#FF0011</color>
     <color name="rdgreen">#0099FF</color>
 
     <array name="array_dot_active">
@@ -31,5 +33,11 @@
         <item>@color/dot_dark_screen1</item>
         <item>@color/dot_dark_screen2</item>
         <item>@color/dot_dark_screen3</item>
+    </array>
+    
+    <array name="array_light">
+        <item>@color/green</item>
+        <item>@color/red</item>
+        <item>@color/blue</item>
     </array>
 </resources>
